<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/lbh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/in_lbh"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/xbh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/in_xbh"
        android:inputType="number" />

    <Button
        android:id="@+id/lxb"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>